// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressStatus render initial state with services and env 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-large"
    style="width: 20%; height: 100vh;"
  >
    <div
      class="progressContainer"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-black StyledProps--padding-small"
      >
        Your Progress
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-icon bp3-icon-tick-circle StyledProps--main StyledProps--color StyledProps--color-green500"
            icon="tick-circle"
          >
            <svg
              data-icon="tick-circle"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                tick-circle
              </desc>
              <path
                d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            You have 2 services and 2 environments.
          </span>
        </div>
        <span>
          Map the above services to a Monitoring source.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressStatus render with some services in activity and monitoring 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-large"
    style="width: 20%; height: 100vh;"
  >
    <div
      class="progressContainer"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold StyledProps--color StyledProps--color-black StyledProps--padding-small"
      >
        Your Progress
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-large"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-icon bp3-icon-tick-circle StyledProps--main StyledProps--color StyledProps--color-green500"
            icon="tick-circle"
          >
            <svg
              data-icon="tick-circle"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                tick-circle
              </desc>
              <path
                d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            You have 2 services and 2 environments.
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-icon bp3-icon-tick-circle StyledProps--main StyledProps--color StyledProps--color-green500"
            icon="tick-circle"
          >
            <svg
              data-icon="tick-circle"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                tick-circle
              </desc>
              <path
                d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            1 service is used in Change Sources.
          </span>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <span
            class="bp3-icon bp3-icon-tick-circle StyledProps--main StyledProps--color StyledProps--color-green500"
            icon="tick-circle"
          >
            <svg
              data-icon="tick-circle"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                tick-circle
              </desc>
              <path
                d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span>
            2 services are used in Monitoring Sources.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
